@startuml
skinparam style strictuml
skinparam packageStyle rectangle

interface Notificable {
  + notificar(mensaje: String): Notificacion
}

interface Listener<T> {
  + onEvento(evento: T): void
}

class Publicador<T> {
  - suscriptores: List<Listener<T>>
  + suscribir(listener: Listener<T>): void
  + publicar(evento: T): void
}

Publicador o--> Listener : notifica >

package "Caso 1: Donación Asignada" {
  class ClientDonacionAsignada
  class DonacionAsignadaEvent
  class DonacionAsignadaListener

  DonacionAsignadaListener ..|> Listener : implementa
  ClientDonacionAsignada --> Publicador : usa
  ClientDonacionAsignada ..> DonacionAsignadaEvent : crea
  DonacionAsignadaListener ..> DonacionAsignadaEvent : procesa
  DonacionAsignadaListener ..> Notificable : notifica >
}

package "Caso 2: Inicio de Ruta" {
  class ClientInicioRuta
  class InicioRutaEvent
  class InicioRutaListener

  InicioRutaListener ..|> Listener : implementa
  ClientInicioRuta --> Publicador : usa
  ClientInicioRuta ..> InicioRutaEvent : crea
  InicioRutaListener ..> InicioRutaEvent : procesa
  InicioRutaListener ..> Notificable : notifica >
}

package "Caso 3: Entrega Realizada" {
  class ClientEntregaRealizada
  class EntregaRealizadaEvent
  class EntregaRealizadaListener

  EntregaRealizadaListener ..|> Listener : implementa
  ClientEntregaRealizada --> Publicador : usa
  ClientEntregaRealizada ..> EntregaRealizadaEvent : crea
  EntregaRealizadaListener ..> EntregaRealizadaEvent : procesa
  EntregaRealizadaListener ..> Notificable : notifica >
}

package "Caso 4: Entrega No Satisfactoria" {
  class ClientEntregaNoSatisfactoria
  class EntregaNoSatisfactoriaEvent
  class EntregaNoSatisfactoriaListener

  EntregaNoSatisfactoriaListener ..|> Listener : implementa
  ClientEntregaNoSatisfactoria --> Publicador : usa
  ClientEntregaNoSatisfactoria ..> EntregaNoSatisfactoriaEvent : crea
  EntregaNoSatisfactoriaListener ..> EntregaNoSatisfactoriaEvent : procesa
  EntregaNoSatisfactoriaListener ..> Notificable : notifica >
}

@enduml
